# LLM-Engineering

./: .gitignore  README.md  pyproject.toml
week01/: day5.ipynb
week02/: day01.ipynb  day1.ipynb
week1/: day1.ipynb  day2.ipynb  day5.ipynb  scrapper.py
