[project]
name = "llm-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "display>=1.0.0",
    "dotenv>=0.9.9",
    "ipykernel>=7.3.0",
    "ipython>=9.14.1",
    "jupyterlab>=4.6.0",
    "openai>=2.43.0",
    "pip>=26.1.2",
    "requests>=2.34.2",
]
